--- a/product-service/Dockerfile
+++ b/product-service/Dockerfile
@@ -1,13 +1,14 @@
 FROM maven:3.9.8-eclipse-temurin-21 AS build
 WORKDIR /workspace
 
-COPY product-service/pom.xml product-service/pom.xml
-RUN mvn -f product-service/pom.xml -B -DskipTests dependency:go-offline
+COPY pom.xml .
+RUN mvn -B -DskipTests dependency:go-offline
 
-COPY product-service product-service
-RUN mvn -f product-service/pom.xml -B -DskipTests clean package
+COPY . .
+RUN mvn -B -DskipTests clean package
 
 FROM eclipse-temurin:21-jre
 WORKDIR /app
-COPY --from=build /workspace/product-service/target/*.jar app.jar
+COPY --from=build /workspace/target/*.jar app.jar
+EXPOSE 8080
 ENTRYPOINT ["java","-jar","app.jar"]
