fix cors allowed origins for vercel frontend

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=api-gateway
 
 server.port=9000
 
-cors.allowed-origins=https://farm-market.vercel.app
+cors.allowed-origins=https://market-frontend-planto.vercel.app,https://*.vercel.app,http://localhost:5173
 
 logging.level.org.springframework.security=DEBUG
 
